--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
             <i class="fas fa-quote-left text-4xl text-gray-500 mb-4"></i>
             <p class="text-xl italic">"I can't thank Air & Rainbow Global Solutions Ltd  enough for their Financial Planning expertise.
                 They helped me get my finances in order, and now I have a clear plan for the future. Their commitment to my financial well-being is truly commendable."</p>
-            <p class="text-lg font-bold">Faith</p>
+            <p class="text-lg font-bold">customer</p>
             <p class="text-gray-500"></p>
           </div>
         </div>
@@ -299,7 +299,7 @@
   <footer class="bg-gray-800 text-white py-4 px-6">
     <div class="container mx-auto flex justify-between items-center">
       <div>
-        <p>&copy; 2021 AIR & RAINBOW GLOBAL SOLUTIONS LTD. All rights reserved.</p>
+        <p>&copy; 2020 AIR & RAINBOW GLOBAL SOLUTIONS LTD. All rights reserved.</p>
       </div>
       <div class="space-x-4">
         <a href="#" class="text-gray-400 hover:text-white"><i class="fab fa-twitter"></i></a>
