--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
   <title>AIR & RAINBOW GLOBAL SOLUTIONS LTD</title>
   <!-- Tailwind CSS CDN -->
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.0.2/dist/tailwind.min.css" rel="stylesheet">
-  <!-- Fontawesome CDN -->
+  <!-- Font Awesome CDN -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" rel="stylesheet">
   <!-- Additional CSS -->
   <link href="path/to/your/additional-styles.css" rel="stylesheet">
   <!-- Additional JS -->
-  <script src="path/to/your/additional-scripts.js"></script>
+  <script src="path/to/your/additional-scripts.js" defer></script>
 </head>
 
 <body>
@@ -32,7 +32,7 @@
   <!-- Hero Section -->
   <section class="hero bg-cover bg-center py-32 px-6" style="background-image: url('https://source.unsplash.com/featured/1280x720/?financial')">
     <div class="container mx-auto text-center">
-      <h1 class="text-4xl font-bold text-white mb-4">Financial Advisor</h1>
+      <h1 class="text-4xl font-bold text-white mb-4">Your Trusted Financial Services Provider</h1>
       <a href="#" class="bg-blue-500 hover:bg-blue-600 text-white py-2 px-6 rounded-full font-bold uppercase">Learn More</a>
     </div>
   </section>
