--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
   <footer class="bg-gray-800 text-white py-4 px-6">
     <div class="container mx-auto flex justify-between items-center">
       <div>
-        <p>&copy; 2020 AIR & RAINBOW GLOBAL SOLUTIONS LTD. All rights reserved.</p>
+        <p>&copy; 2021 AIR & RAINBOW GLOBAL SOLUTIONS LTD. All rights reserved.</p>
       </div>
       <div class="space-x-4">
         <a href="#" class="text-gray-400 hover:text-white"><i class="fab fa-twitter"></i></a>
@@ -309,6 +309,9 @@
       </div>
     </div>
   </footer>
+</body>
+
+</html>
 
   <!-- Additional CSS/JS -->
   <link href="path/to/your/additional-styles.css" rel="stylesheet">
