--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
             <i class="fas fa-quote-left text-4xl text-gray-500 mb-4"></i>
             <p class="text-xl italic">"I can't thank Air & Rainbow Global Solutions Ltd  enough for their Financial Planning expertise.
                 They helped me get my finances in order, and now I have a clear plan for the future. Their commitment to my financial well-being is truly commendable."</p>
-            <p class="text-lg font-bold">customer</p>
+            <p class="text-lg font-bold">Customer</p>
             <p class="text-gray-500"></p>
           </div>
         </div>
