--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
           <div class="text-center">
             <img src="path/to/your/team-member1.jpg" alt="Team Member 1" class="rounded-full mb-4" width="200">
             <h3 class="text-xl font-bold mb-2">Ojonugwa Wada</h3>
-            <p>Financial Advisor</p>
+            <p>Founder & CEO</p>
             <div class="flex justify-center mt-4">
               <a href="#" class="text-blue-500 hover:text-blue-600 mx-2"><i class="fab fa-twitter"></i></a>
               <a href="#" class="text-blue-500 hover:text-blue-600 mx-2"><i class="fab fa-linkedin"></i></a>
@@ -239,8 +239,8 @@
         <div class="w-1/3">
           <div class="text-center">
             <img src="path/to/your/team-member2.jpg" alt="Team Member 2" class="rounded-full mb-4" width="200">
-            <h3 class="text-xl font-bold mb-2">Amos Hassan</h3>
-            <p>Investment Analyst</p>
+            <h3 class="text-xl font-bold mb-2">Emmanuel Idakwo</h3>
+            <p>Secretary</p>
             <div class="flex justify-center mt-4">
               <a href="#" class="text-blue-500 hover:text-blue-600 mx-2"><i class="fab fa-twitter"></i></a>
               <a href="#" class="text-blue-500 hover:text-blue-600 mx-2"><i class="fab fa-linkedin"></i></a>
